Move JAXP to its own module
Tested-by: Pranav Purwar <purwarpranav80@gmail.com>
Signed-off-by: PranavPurwar <purwarpranav80@gmail.com>